<resources>
    <string name="app_name">OnlineShop</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="reg_hint">Already have an account? <font color="#254FE6"><b>Log in</b></font></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="name_placeholder">%s %s</string>
    <string name="balance_placeholder">$ %s</string>
    <string name="location">Location</string>
    <string name="trade_by_bata">Trade by <font color="#4E55D7">bata</font></string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="view_all">View all</string>
    <string name="latest_deal">Latest Deal</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="discount_holder">%s\%% off</string>
    <string name="rate_holder"><b>%s </b><font color="#808080">(%s reviews)</font></string>
    <string name="error_home">Seems like something went wrong :(</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="default_price">$ 0</string>
</resources>