<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_heart"
        android:icon="@drawable/ic_heart"
        android:title="@string/favourites" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_message"
        android:icon="@drawable/ic_message"
        android:title="@string/messages" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_ic_profile"
        android:title="@string/profile" />

</menu>