<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.register.SignInFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/title_color"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="11sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="35dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:backgroundTint="@color/btn_color"
                android:fontFamily="@font/montserrat_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp" />

            <ProgressBar
                android:id="@+id/pb"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/reg_hint"
            android:textColor="@color/reg_hint"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="74dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="38dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_apple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in_with_apple"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>