<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.auth.login.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/title_color"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="11sp" />

        <com.staytonight.onlineshop.base.views.PasswordInput
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="43dp"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            app:hintText="@string/password"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="99dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:backgroundTint="@color/btn_color"
                android:fontFamily="@font/montserrat_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp" />

            <ProgressBar
                android:id="@+id/pb"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>