<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.details.DetailsFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingVertical="13dp"
        android:rotationY="180"
        android:src="@drawable/ic_bracket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_image"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:src="@drawable/details" />

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/fl_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_image">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/profile_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_images"
        tools:text="New balance Sneakers" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/profile_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_images"
        tools:text="$ 22" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/change_photo"
        android:textColor="@color/reg_hint"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <TextView
        android:id="@+id/tv_rate_and_rate_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/rate_holder"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/iv_star"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_nav"
        android:backgroundTint="@color/cart"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="17dp"
                android:text="@string/quantity"
                android:textColor="@color/reg_hint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_remove"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="11dp"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/minus"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="11dp"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/plus"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn">

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="29dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/default_price"
                android:textColor="@color/total"
                android:textSize="8sp"
                tools:text="#2500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="19dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>